[package]
name = "iced_video_player"
description = "A convenient video player widget for Iced"
homepage = "https://github.com/jazzfool/iced_video_player"
repository = "https://github.com/jazzfool/iced_video_player"
readme = "README.md"
keywords = ["gui", "iced", "video"]
categories = ["gui", "multimedia"]
version = "0.6.0"
authors = ["jazzfool"]
edition = "2024"
resolver = "2"
license = "MIT OR Apache-2.0"
exclude = [".media/test.mp4"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["wasm32-unknown-unknown"]

[dependencies]
glib = "0.20"  # gobject traits and error type
gstreamer = "0.23"
gstreamer-app = "0.23"  # appsink
gstreamer-base = "0.23"  # basesrc
gstreamer-video = "0.23"  # VideoMeta
iced = { git = "https://github.com/iced-rs/iced", rev = "c3fa551", features = [
  "advanced",
  "image",
  "wgpu"
] }
iced_core = { package = "iced_core", git = "https://github.com/iced-rs/iced/", rev = "c3fa551" }
iced_wgpu = { package = "iced_wgpu", git = "https://github.com/iced-rs/iced/", rev = "c3fa551" }
log = "0.4"
thiserror = "1"
url = "2"  # media uri
